--- a/GladOS.Core/GladOS.Droid/Resources/layout/MeetingView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/MeetingView.axml
@@ -58,6 +58,6 @@
   </LinearLayout>
   <Button
       android:text="Save Meeting"
-      android:layout_width="wrap_content"
+      android:layout_width="fill_parent"
       android:layout_height="wrap_content"/>
 </LinearLayout>
