--- a/GladOS.Core/GladOS.Droid/Resources/layout/MeetingView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/MeetingView.axml
@@ -6,6 +6,32 @@
     android:layout_height="fill_parent"
     android:minWidth="25px"
     android:minHeight="25px">
+  <LinearLayout
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_weight="1">
+    <Button
+        android:text="HOME"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        local:MvxBind="Click HomePressed" />
+    <Button
+        android:text="Schedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        local:MvxBind="Click SchedulePressed" />
+    <Button
+        android:text="Search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        local:MvxBind="Click SearchPressed" />
+    <Button
+        android:text="Profile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        local:MvxBind="Click ProfilePressed" />
+  </LinearLayout>
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
