--- a/GladOS.Core/GladOS.Droid/Resources/layout/MeetingView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/MeetingView.axml
@@ -7,10 +7,10 @@
     android:minWidth="25px"
     android:minHeight="25px">
   <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="1">
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="fill_parent"
+      android:layout_weight="1">
     <Button
         android:text="HOME"
         android:layout_width="wrap_content"
@@ -36,54 +36,51 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:textSize="40dp"
-      android:text="Add a meeting to the calendar"/>
+      android:text="Add a meeting to the calendar" />
   <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
     <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="30dp"
-      android:text="Meeting Date: "/>
-    <EditText
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="30dp"
-      android:hint="dd/mm/yyyy"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:text="Meeting Date: " />
+    <DatePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp" />
   </LinearLayout>
   <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
     <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="30dp"
-      android:text="Meeting Start Time: "/>
-    <EditText
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="30dp"
-      android:hint="hh:mm"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:text="Meeting Start Time: " />
+    <TimePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp" />
   </LinearLayout>
   <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content">
     <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="30dp"
-      android:text="Meeting End Time: "/>
-    <EditText
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textSize="30dp"
-      android:hint="hh:mm"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:text="Meeting End Time: " />
+    <TimePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp" />
   </LinearLayout>
   <Button
       android:text="Save Meeting"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content"/>
+      android:layout_height="wrap_content" />
 </LinearLayout>
