--- a/GladOS.Core/GladOS.Droid/Resources/layout/HomeView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/HomeView.axml
@@ -52,9 +52,7 @@
         android:layout_margin="5dp"
         android:layout_rowSpan="2"
         android:clickable="true" />
-    <EditText
-        android:background="@android:color/darker_gray"
-        android:text="Enter Name"
+    <TextView
         android:layout_row="0"
         android:layout_column="1"
         android:layout_height="30dp"
@@ -62,9 +60,7 @@
         android:layout_margin="10dp"
         android:layout_columnSpan="2"
         local:MvxBind="Text Name"/>
-    <EditText
-        android:text="Enter Employer"
-        android:background="@android:color/darker_gray"
+    <TextView
         android:layout_row="1"
         android:layout_column="1"
         android:layout_height="30dp"
@@ -79,9 +75,7 @@
         android:layout_column="0"
         android:layout_row="2"
         android:layout_margin="10dp" />
-    <EditText
-        android:text="Enter Email"
-        android:background="@android:color/darker_gray"
+    <TextView
         android:layout_column="1"
         android:layout_row="2"
         android:layout_height="30dp"
@@ -133,15 +127,12 @@
         android:layout_margin="10dp"
         android:clickable="true" />
     <TextView
-        android:id="@+id/textViewPhone"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Phone:"
         android:layout_row="5"
         android:layout_column="0"
         android:layout_margin="10dp" />
-    <EditText
-        android:background="@android:color/darker_gray"
-        android:text="Enter Phone Number"
+    <TextView
         android:layout_row="5"
         android:layout_column="1"
         android:layout_height="30dp"
