--- a/GladOS.Core/GladOS.Droid/Resources/layout/ProfileView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/ProfileView.axml
@@ -35,7 +35,7 @@
         local:MvxBind="Click ProfilePressed" />
   </LinearLayout>
   <LinearLayout
-      android:orientation="vertical"
+      android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
       android:layout_weight="1">
@@ -49,7 +49,7 @@
         local:MvxBind="Text Name"/>
   </LinearLayout>
   <LinearLayout
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_weight="1">
@@ -63,7 +63,7 @@
         local:MvxBind="Text Employer"/>
   </LinearLayout>
     <LinearLayout
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_weight="1">
@@ -77,7 +77,7 @@
         local:MvxBind="Text Email"/>
     </LinearLayout>
       <LinearLayout
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_weight="1">
@@ -91,7 +91,7 @@
         local:MvxBind="Text Number"/>
       </LinearLayout>
         <LinearLayout
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_weight="1">
@@ -100,6 +100,6 @@
         android:text="Save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" 
-        local:MvxBind="Click AddNewPerson"/>
+        local:MvxBind="Click UpdatePerson"/>
   </LinearLayout>
 </LinearLayout>
