--- a/GladOS.Core/GladOS.Droid/Resources/layout/ScheduleView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/ScheduleView.axml
@@ -64,21 +64,13 @@
         android:minWidth="25px"
         android:minHeight="25px">
         <ImageButton
-            android:src="@drawable/meeting"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            local:MvxBind="Click InAMeetingPressed" />
-        <ImageButton
             android:src="@drawable/office"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:scaleType="fitCenter"
             android:layout_weight="1"
             android:adjustViewBounds="true"
-            local:MvxBind="Click OfficeHoursPressed" />
+            local:MvxBind="Click EventPressed" />
         <ImageButton
             android:src="@drawable/busy"
             android:layout_width="wrap_content"
@@ -87,13 +79,5 @@
             android:layout_weight="1"
             android:adjustViewBounds="true"
             local:MvxBind="Click BusyPressed" />
-        <ImageButton
-            android:src="@drawable/available"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            android:layout_weight="1"
-            android:adjustViewBounds="true"
-            local:MvxBind="Click FreeTimePressed" />
     </LinearLayout>
 </LinearLayout>
