Look and feel updated

--- a/GladOS.Core/GladOS.Droid/Resources/layout/item_person.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/item_person.axml
@@ -4,6 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/background_light"
     android:layout_margin="10dp">
   <Mvx.MvxImageView
         android:layout_width="90dp"
