--- a/GladOS.Core/GladOS.Droid/Resources/layout/HomeView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/HomeView.axml
@@ -1,187 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--William Gwilt n9425438
-    NSC Industries prject GladOS-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
+    android:background="@android:color/background_light"
+    android:weightSum="100">
   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_weight="1">
+      android:layout_height="0dp"
+      android:layout_weight="12"
+      android:weightSum="100">
     <Button
         android:text="HOME"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click HomePressed" />
     <Button
-        android:text="Schedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:text="Location"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click SchedulePressed" />
     <Button
         android:text="Search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click SearchPressed" />
     <Button
         android:text="Profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click ProfilePressed" />
   </LinearLayout>
-  <GridLayout
-        android:minWidth="25px"
-        android:minHeight="25px"
-        android:layout_width="match_parent"
-        android:layout_height="555.0dp"
-        android:id="@+id/gridLayout1"
-        android:layout_marginBottom="0.0dp">
-    <ImageView
-        android:src="@drawable/steve"
-        android:id="@+id/imageViewDP"
-        android:scaleType="centerCrop"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:layout_height="100dp"
-        android:layout_width="100dp"
-        android:layout_margin="5dp"
-        android:layout_rowSpan="2"
-        android:clickable="true" />
-    <TextView
-        android:layout_row="0"
-        android:layout_column="1"
-        android:layout_height="30dp"
-        android:layout_width="260dp"
+  <LinearLayout
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="17"
+      android:weightSum="100">
+    <Mvx.MvxImageView
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="50"
+        androidlayout_gravity="center"
         android:layout_margin="10dp"
-        android:layout_columnSpan="2"
+        android:src="@drawable/sample_0"/>
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="50"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
         local:MvxBind="Text Name"/>
+  </LinearLayout>
+  <LinearLayout
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="17">
     <TextView
-        android:layout_row="1"
-        android:layout_column="1"
-        android:layout_height="30dp"
-        android:layout_width="260dp"
-        android:layout_margin="10dp"
-        android:layout_columnSpan="2"
+        android:text="Employer : "
+              android:textColor="#000000"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
         local:MvxBind="Text Employer"/>
+  </LinearLayout>
+  <LinearLayout
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="17">
     <TextView
         android:text="Email : "
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:id="@+id/textViewEmail"
-        android:layout_column="0"
-        android:layout_row="2"
-        android:layout_margin="10dp" />
-    <TextView
-        android:layout_column="1"
-        android:layout_row="2"
-        android:layout_height="30dp"
-        android:layout_width="260dp"
-        android:layout_margin="10dp"
-        android:layout_columnSpan="2" 
-        local:MvxBind="Text Email"/>
-    <ImageView
-        android:id="@+id/imageViewFbIcon"
-        android:src="@drawable/facebook_icon"
-        android:scaleType="centerCrop"
-        android:layout_row="3"
-        android:layout_column="0"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="30dp"
-        android:clickable="true" />
-    <ImageView
-        android:id="@+id/imageViewLinkedIcon"
-        android:src="@drawable/linkedin_icon"
-        android:scaleType="centerCrop"
-        android:layout_row="3"
-        android:layout_column="1"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="30dp"
-        android:clickable="true" />
-    <ImageView
-        android:id="@+id/imageViewGitIcon"
-        android:src="@drawable/Github_icon"
-        android:scaleType="centerCrop"
-        android:layout_row="3"
-        android:layout_column="2"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_margin="10dp"
-        android:layout_marginLeft="30dp"
-        android:clickable="true" />
-    <ImageView
-        android:id="@+id/imageViewSchedule"
-        android:src="@drawable/Schedule"
-        android:layout_row="4"
-        android:layout_column="0"
-        android:layout_columnSpan="3"
-        android:layout_height="100dp"
-        android:layout_width="360dp"
-        android:layout_margin="10dp"
-        android:clickable="true" />
-    <TextView
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Phone:"
-        android:layout_row="5"
-        android:layout_column="0"
-        android:layout_margin="10dp" />
-    <TextView
-        android:layout_row="5"
-        android:layout_column="1"
-        android:layout_height="30dp"
-        android:layout_width="260dp"
-        android:layout_margin="10dp"
-        android:layout_columnSpan="2" 
-        local:MvxBind="Text Number"/>
-    <TextView
-        android:id="@+id/textViewLocate"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Locate Me Using :"
-        android:layout_row="6"
-        android:layout_column="0"
-        android:layout_margin="10dp"
-        android:layout_columnSpan="2" />
-    <CheckBox
-        android:text="NFC"
-        android:id="@+id/checkBoxNFC"
-        android:layout_column="0"
-        android:layout_row="7"
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="10dp" />
-    <CheckBox
-        android:text="Wifi"
-        android:id="@+id/checkBoxWifi"
-        android:layout_row="7"
-        android:layout_column="1"
-        android:layout_marginTop="5dp" />
-    <CheckBox
-        android:text="GPS"
-        android:id="@+id/checkBoxGPS"
-        android:layout_column="0"
-        android:layout_row="8"
+              android:textColor="#000000"
+        android:layout_gravity="center"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp" />
-    <CheckBox
-        android:text="Bluetooth"
-        android:id="@+id/checkBoxBluetooth"
-        android:layout_column="1"
-        android:layout_row="8"
-        android:layout_marginTop="5dp" />
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
+        local:MvxBind="Text Email"/>
+  </LinearLayout>
+  <LinearLayout
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="17">
+    <TextView
+        android:text="Number : "
+              android:textColor="#000000"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
+        local:MvxBind="Text Number"/>
+  </LinearLayout>
+  <LinearLayout
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="17">
     <Button
-        android:text="Update Location"
-        android:layout_column="2"
-        android:layout_row="7"
-        android:layout_margin="5dp"
-        android:clickable="true"
-        android:layout_rowSpan="2"
-        android:layout_marginTop="20dp" 
+        android:text="Save"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
+        android:layout_gravity="center"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click UpdateLocationPressed"/>
-  </GridLayout>
+  </LinearLayout>
 </LinearLayout>
