--- a/GladOS.Core/GladOS.Droid/Resources/layout/LocationView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/LocationView.axml
@@ -2,42 +2,55 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-  <LinearLayout
-    android:orientation="horizontal"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_weight="1">
+    android:background="@android:color/background_light"
+    android:weightSum="100">
+  <LinearLayout
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="12"
+      android:weightSum="100">
     <Button
         android:text="HOME"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click HomePressed" />
     <Button
-        android:text="Schedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:text="Location"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click SchedulePressed" />
     <Button
         android:text="Search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click SearchPressed" />
     <Button
         android:text="Profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click ProfilePressed" />
   </LinearLayout>
   <LinearLayout
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="1"
-    android:minWidth="25px"
-    android:minHeight="25px">
-  <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+      android:orientation="vertical"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="88">
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/locationview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
