--- a/GladOS.Core/GladOS.Droid/Resources/layout/LoginView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/LoginView.axml
@@ -4,26 +4,57 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
+    android:background="@android:color/background_light"
+    android:weightSum="100">
   <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="15"
+      android:textColor="#000000"
       android:textSize="40dp"
+      android:gravity="center"
       android:text="Your Name" />
   <EditText
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      android:textSize="40dp"
+      android:layout_height="0dp"
+      android:layout_weight="15"
+      android:textColor="#000000"
+      android:layout_marginTop="10dp"
+      android:layout_marginBottom="10dp"
+      android:layout_marginLeft="20dp"
+      android:layout_marginRight="20dp"
+      android:textSize="30dp"
       local:MvxBind="Text SearchName" />
   <Button
       android:text="Login"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content" 
+      android:layout_height="0dp"
+      android:layout_weight="20"
+      android:textColor="#000000"
+      android:layout_marginLeft="80dp"
+      android:layout_marginRight="80dp"
+      android:layout_marginTop="20dp"
+      android:layout_marginBottom="20dp"
+      android:background="@drawable/loginBtn"
       local:MvxBind="Click LoginPressed"/>
+  <TextView
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="5"
+      android:textColor="#000000"
+      android:textSize="20dp"
+      android:gravity="center"
+      android:text="or"/>
   <Button
       android:text="Create User"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content" 
+      android:layout_height="0dp"
+      android:layout_weight="20"
+      android:textColor="#000000"
+      android:layout_marginLeft="80dp"
+      android:layout_marginRight="80dp"
+      android:layout_marginTop="20dp"
+      android:layout_marginBottom="20dp"
+      android:background="@drawable/loginBtn"
       local:MvxBind="Click CreatePerson"/>
 </LinearLayout>
