--- a/GladOS.Core/GladOS.Droid/Resources/layout/ProfileView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/ProfileView.axml
@@ -1,105 +1,138 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--William Gwilt n9425438
-    NSC Industries prject GladOS-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:minWidth="25px"
-    android:minHeight="25px">
+    android:background="@android:color/background_light"
+    android:weightSum="100">
   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_weight="1">
+      android:layout_height="0dp"
+      android:layout_weight="12"
+      android:weightSum="100">
     <Button
         android:text="HOME"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click HomePressed" />
     <Button
-        android:text="Schedule"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:text="Location"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click SchedulePressed" />
     <Button
         android:text="Search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click SearchPressed" />
     <Button
         android:text="Profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_weight="25"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click ProfilePressed" />
   </LinearLayout>
   <LinearLayout
       android:orientation="horizontal"
       android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_weight="1">
+      android:layout_height="0dp"
+      android:layout_weight="17">
     <TextView
         android:text="Name : "
-        android:layout_width="wrap_content"
+              android:textColor="#000000"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"/>
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
         local:MvxBind="Text Name"/>
   </LinearLayout>
   <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="1">
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="17">
     <TextView
         android:text="Employer : "
-        android:layout_width="wrap_content"
+              android:textColor="#000000"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"/>
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
         local:MvxBind="Text Employer"/>
   </LinearLayout>
-    <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="1">
+  <LinearLayout
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="17">
     <TextView
         android:text="Email : "
-        android:layout_width="wrap_content"
+              android:textColor="#000000"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"/>
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
         local:MvxBind="Text Email"/>
-    </LinearLayout>
-      <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="1">
+  </LinearLayout>
+  <LinearLayout
+      android:orientation="horizontal"
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="17">
     <TextView
         android:text="Number : "
-        android:layout_width="wrap_content"
+              android:textColor="#000000"
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"/>
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginRight="20dp"
         local:MvxBind="Text Number"/>
-      </LinearLayout>
-        <LinearLayout
-    android:orientation="horizontal"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:layout_weight="1">
-
+  </LinearLayout>
+  <LinearLayout
+      android:layout_width="fill_parent"
+      android:layout_height="0dp"
+      android:layout_weight="17">
     <Button
         android:text="Save"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
+        android:layout_gravity="center"
+        android:background="@drawable/loginBtn"
         local:MvxBind="Click UpdatePerson"/>
   </LinearLayout>
 </LinearLayout>
