--- a/GladOS.Core/GladOS.Droid/Resources/layout/SearchView.axml
+++ b/GladOS.Core/GladOS.Droid/Resources/layout/SearchView.axml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--William Gwilt n9425438
-    NSC Industries prject GladOS-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:local="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
@@ -53,7 +51,6 @@
       android:layout_height="wrap_content" 
       android:textSize="40dp"
       local:MvxBind="ItemsSource Persons; ItemClick SelectedPerson"
-      local:MvxItemTemplate="@layout/item_person"
-      />
+      local:MvxItemTemplate="@layout/item_person"/>
   </LinearLayout>
 </LinearLayout>
